config/k8s/monitoring/rabbitmq/service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: monitoring
spec:
  type: ExternalName
  externalName: rabbitmq-monitoring.svc.cluster.local
  ports:
    - port: 5672
      targetPort: 5672
      name: rabbitmq
