config/k8s/monitoring/rabbitmq/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-external
  namespace: monitoring
spec:
  type: LoadBalancer
  ports:
    - port: 5672
      targetPort: 5672
      name: amqp
    - port: 15672
      targetPort: 15672
      name: management
  selector:
    app: rabbitmq
